--- a/style-A.css
+++ b/style-A.css
@@ -14,11 +14,10 @@ body{
   padding-top: 150px; /* ruang header fixed */
 }
 
-/* ================= JADWAL SHOLAT ================= */
 .countdown{
-  position:absolute;           /* overlay */
-  bottom:120px;                /* SESUAIKAN jarak ke box imsak */
-  left:10px;                  /* sejajar kanan */
+  position:absolute;           
+  bottom:120px;                
+  left:10px;                  
   background:rgba(0,0,0,.55);
   padding:10px 14px;
   border-radius:12px;
@@ -30,14 +29,14 @@ body{
 }
 
 .jadwal {
-  margin-top: auto;          /* INI KUNCINYA */
+  margin-top: auto;          
   display: flex;
-  flex-direction: row;       /* 1 row */
+  flex-direction: row;       
   gap: 15px;
 }
 
 .box {
-  flex: 1;               /* semua box sama lebar */
+  flex: 1;               
   text-align: center;
 }
 
@@ -81,8 +80,6 @@ body{
   100% { transform: translateX(-100%); }
 }
 
-/* ================= TAMBAHAN ================= */
-
 .countdown {
   margin-top: 15px;
   text-align: center;
@@ -98,6 +95,8 @@ body{
   text-align: center;
   padding: 10px;
 }
+
+
 
 
 
